feat: 画像を追加

--- a/articles/e42fa03847dcd1.md
+++ b/articles/e42fa03847dcd1.md
@@ -143,23 +143,21 @@ sequenceDiagram
 
 例えば、以下のステップをご覧ください。
 
-```mermaid
-graph LR
-    A[1. エンドユーザーによる申請] --> B[2. 運用側オペレーターによる審査・承認]
-    B --> C[3. エンドユーザーによる最後の操作]
-
-    style C fill:#f9f,stroke:#333,stroke-width:2px
-```
+1. エンドユーザーによる申請
+2. 運用側オペレーターによる審査・承認
+3. エンドユーザーによる最後の操作
 
 さて、この3の操作を行うためには当然1と2の操作を行う必要がありますが、この3の操作がユーザーごとに1度しか実行できない操作である場合どうでしょう？
 
-当然毎回テストデータを作成する必要があり手間ですよね。ユニットテストやUIを解さない形のテストでも実装したいところですが、実際の画面やユーザーセッションを介して挙動を確かめる必要はあると思います。
+当然毎回テストデータを作成する必要があり手間ですよね。多くの状態を確かめる場合、ユニットテストやUIを解さない形のテストでも実装すると思いますが、実際の画面やユーザーセッションを介して挙動を確かめたい場面は必ずあると思います。
 
-そこで、Postmanを使ってAPIコールを確認しながら、データを作成する際のAPIコールをメモしておくことで、毎回手動でUIを介したデータ作成を行う必要がなくなります。
+そこで、ChromeのDev Toolsを使ってリクエストの内容を見ながら、それを[Postman](https://www.postman.com/)を使って再現性のあるコレクションとして作成しておけば、毎回手動でUIを介したデータ作成を行う必要がなくなります。
 
-TODO: ここにPostmanのスクリーンショットを貼る
+Postmanの使い方については、以下の記事をご参照ください。（今回の記事ではPostmanの使い方を詳しく説明しません）
 
-当然Postman上では送信するパラメーターやヘッダーを変更することができるので、ユーザーごとに異なるデータを作成できます。シンプルにテストデータを作るだけでなく、ここでPostmanのコレクションを作成しておくことで、実際のAPIテストなどの実装にも役立ち一石二鳥です。また、UIテストの自動化を実装する際にも、必要データの事前作成などは必ずしもUIを介して行う必要はないので、テストデータ作成用のAPIコレクションが役に立つことでしょう。
+https://sqripts.com/2022/11/30/22135/
+
+当然Postman上では送信するパラメーターやヘッダーを変更することができるので、リクエストごとに異なるデータを作成できます。シンプルにテストデータを作るだけでなく、ここでPostmanのコレクションを作成しておくことで、実際のAPIテストなどの実装にも役立ち一石二鳥です。また、UIテストの自動化を実装する際にも、必要データの事前作成などは必ずしもUIを介して行う必要はないので、テストデータ作成用のAPIコレクションが役に立つことでしょう。
 
 ## 具体的な例2: さくっとUIを操作したい（ブックマークレットの作成）
 
@@ -167,62 +165,109 @@ TODO: ここにPostmanのスクリーンショットを貼る
 
 例えば、先ほどの例をもう一度見てみましょう。
 
-```mermaid
-graph LR
-    A[1. エンドユーザーによる申請] --> B[2. 運用側オペレーターによる審査・承認]
-    B --> C[3. エンドユーザーによる最後の操作]
+1. エンドユーザーによる申請
+2. 運用側オペレーターによる審査・承認
+3. エンドユーザーによる最後の操作
 
-    style B fill:#f9f,stroke:#333,stroke-width:2px
-```
+さて、非常に極端な例ですが、2の審査画面に非常に多くのチェック項目があるとどうでしょう？以下のようなチェックボックスを人間（将来的にはAIかもしれませんが）にすべてチェックしてもらう必要があるとします。
 
-さて、非常に極端な例ですが、この審査画面に非常に多くのチェック項目があるとどうでしょう？以下のようなチェックボックスを人間（将来的にはAIかもしれませんが）にすべてチェックしてもらう必要があるとします。
+![sampleCheckbox](/images/soloDevOps/sample_examination.png)
 
-チェック1: 氏名が正しい、チェック2: 住所が正しい、チェック3: 電話番号が正しい、チェック4: メールアドレスが正しい…このようなシンプルなチェックでも、項目が10個以上あると毎回手動でチェックするのは面倒ですよね。
-
-以下はサンプルの画面です。
-
-TODO: ここにチェックボックスのサンプル画像を貼る
+10秒 ~ 20秒程度の時間で終わると思います。しかし、これを毎回手動で行うのは面倒です。UIには「1つ1つの確認を確実に行ってもらうために、チェックボックス一括チェック機能がない」という明確な思想があるかもしれませんが、テストデータを作るために毎回手動でチェックするのは面倒です。
 
 そこで、ブックマークレットを作成しておくことで、毎回手動でチェックする必要がなくなります。ブックマークレットでは、ブラウザ上の操作をJavaScriptで記述することで、特定の操作を自動化できます。
 
 例えば、以下の例ではZennの記事を検索できるブックマークレットを作成しています。
 
-以下のようなコードを書いて、ブックマークレットとして利用できる形で保存しておくことで、ブックマークをクリックするだけで、操作を自動化できます。
+https://zenn.dev/ymmt1089/articles/20220415_bookmarklet
+
+例えば以下のようなコードを書いて、ブックマークレットとして利用できる形式に変換することで、JavaScriptについて詳しくない人でも簡単に操作の自動化を行えますし、配布も簡単です。（単にブックマークをエクスポートすればよいだけですから）
 
 ```javascript
-javascript:(function(){
-  const searchTerm = prompt('検索したい記事のキーワードを入力してください');
-  if (searchTerm) {
-    window.location.href = `https://zenn.dev/search?q=${encodeURIComponent(searchTerm)}`;
+// シンプルにAIに書いてもらった全ての「OK」チェックボックス（実際はspan要素）をクリックするコード
+// Function to find and click all OK buttons
+function selectAllOK() {
+  // Method 1: Find span elements
+  const spans = document.querySelectorAll("span");
+  let clicked = 0;
+
+  for (let i = 0; i < spans.length; i++) {
+    if (spans[i].textContent.trim() === "OK") {
+      spans[i].click();
+      clicked++;
+    }
   }
-})();
+  
+  // Display results
+  console.log(`Clicked ${clicked} OK buttons`);
+  return clicked;
+}
 ```
 
-なんとなくお察しいただいていると思いますが、私はこのブックマークをAIに書いてもらっています。
+さらにAIエージェントに「ブックマークレットとして使えるように変換して」と指示を出すだけで、ブックマークレット用のコードに変換してくれます。
+
+```javascript
+// Bookmarklet version (copy this to your browser's bookmark URL)
+// javascript:(function(){const spans=document.querySelectorAll('span');let clicked=0;for(let i=0;i<spans.length;i++){if(spans[i].textContent.trim()==='OK'){spans[i].click();clicked++}}console.log('Clicked '+clicked+' OK buttons');return false;})();
+```
 
 ### VSCodeやCursorに情報を与えてスクリプトを書いてもらう
 
 [playwright-mcp](https://github.com/microsoft/playwright-mcp) と呼ばれるツールを使うことでVSCodeやCursorにチャットで指示を出して、ブラウザを実際に開いて操作してもらうことができます。
 
-ただし、それすらも面倒な場合HTMLの要素をChromeのDevToolsで調べて、以下のような情報をAIエージェントに渡すことで、スクリプトを書いてくれます。
+https://zenn.dev/aldagram_tech/articles/3614dbabbf2f5d
 
-TODO: DevToolsのElementsタブを開いて、操作したい要素を右クリックして「Copy」→「Copy selector」を選択した画像を貼る
+ただし、そのようなことすら面倒な場合HTMLの要素をChromeのDevToolsで調べて、以下のような情報をAIエージェントに渡すことで、スクリプトを書いてくれます。
+
+![DevTool-demo](/images/soloDevOps/sample_devtools.png)
 
 それをAIエージェントに渡して以下のような指示を出します。
 
-「このように「OK」と書いてあるチェックボックスをすべてクリックするブックマークレットを作りたいです。まずはブラウザのDevToolsのConsoleタブに貼り付けて実行してみます。JavaScriptのコードを書いてください」
+```
+以下はあるWebページのHTMLの一部です。この中に「OK」と書いてあるチェックボックスがあるので、すべてクリックするスクリプトを書いてください。
 
-それらをChromeのDevToolsのConsoleタブに貼り付けて実行することで、実際に操作を自動化できます。後はtry and errorで、必要に応じてAIエージェントに指示を出して修正してもらいます。
+<div class="styles_inputContainer__tALkw checked" onclick="selectOption(this, 'ok')">
+    <span class="styles_radioButton"><span></span></span>
+    <span>OK</span>
+</div>
+```
 
-意図通りの挙動になったら以下のような指示を与えて、ブックマークレット用のコードに変換してもらいます。
+![AI-agent-demo](/images/soloDevOps/sample_vscode_agent.png)
 
-「このコードをブックマークレットとして使えるように変換してください。ブックマークレット用のコードはこのjsファイルのコメントとして出力してください」
+そうするとAIエージェントが先ほどのようなコードを書いてくれると思います。
 
-後はブックマークを新しく作成して、保存するだけです。自分だけで使う分にも良いですが、チームで使う場合にはブックマークの情報を共有するだけで、全員の20秒を削減できます。
+書いてくれたコードをそのまま ChromeのDevToolsのConsoleタブに貼り付けて実行することで、コードの挙動を確認できます。
+
+![devtools-console](/images/soloDevOps/sample_devtools_console.png)
+
+いい感じに動いたらさらに以下のような指示を出しましょう。
+
+```
+いいね。いい感じに動きました。では、このコードをブックマークレットとして使えるように変換してください。ブックマークレット用のコードはこのjsファイルのコメントとして出力してください。
+```
+
+以下のようにブックマークレット用のコードを文字列を出力してくれます。
+
+```javascript
+// Bookmarklet version (copy this to your browser's bookmark URL)
+// javascript:(function(){const spans=document.querySelectorAll('span');let clicked=0;for(let i=0;i<spans.length;i++){if(spans[i].textContent.trim()==='OK'){spans[i].click();clicked++}}console.log('Clicked '+clicked+' OK buttons');return false;})();
+```
+
+後はこのコードをコピーしてブックマークとして保存します。
+
+保存の仕方については先ほどの記事の[ブックマークへ追加](https://zenn.dev/ymmt1089/articles/20220415_bookmarklet#%E3%83%96%E3%83%83%E3%82%AF%E3%83%9E%E3%83%BC%E3%82%AF%E3%81%B8%E8%BF%BD%E5%8A%A0)のセクションを参照ください。
+
+後はこのページを開いているときに、ブックマークをクリックするだけで、すべての「OK」チェックボックスにチェックが入ります。
 
 ## さいごに
 
-今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました。ぶっちゃけ「そんなことをやっている暇がない」と思う方も多いと思います。それでも、日々の改善の種を忘れないようにメモ化しておき、誰かに共有するだけでも誰か別の人が実現してくれるかもしれません。
+今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました。
 
-大事なのは「これいいかも」と思ったことを日々の中で忘れて諦めないことだと思います。この記事が誰かにとって少しでも参考になれば幸いです。最後までお読みいただきありがとうございました。
+正直なところ「そんなことをやっている暇がない」「そんな小さなことをしても仕方ない」と思う方も多いと思います。そんな時でも、私は小さな改善の種を忘れたり、諦めてしまわないことが大事だと思っています。
+今回は非常に小さな改善でしたが、「テスト環境でも本番に近いテストをするために日々どんなデータを作っておかないといけないか」「今の環境でもできることはなにか」といったことを考えるきっかけになるはずです。
 
+また、ただ改善を忘れないようにして誰かにメモを共有するだけで誰か別の人がサクッと実装してくれるかもしれません。ただメモを書いておくだけで、誰かの時間を削減できる可能性があるのです。
+
+私個人としては、今後もエンジニアになった原体験を忘れずに、日々の改善を積み重ねてより大きな改善をできる糧にしたいと思っています。
+
+以上、最後まで読んでいただきありがとうございました。
