--- a/articles/e42fa03847dcd1.md
+++ b/articles/e42fa03847dcd1.md
@@ -1,13 +1,11 @@
 ---
-title: "ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET)の1人DevOpsタイム！"
+title: "ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET)の1人DevOpsタイムでしていること"
 emoji: "⏲️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["javascript", "Postman", "Cursor"]
 published: true
 publication_name: "moneyforward"
 ---
-
-# ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET）の1人DevOpsタイム取り組み！
 
 こんにちは。ダイの大冒険エンジョイ勢の[bun913](https://x.com/bun7623514)と申します。
 
@@ -50,7 +48,7 @@ https://open.spotify.com/episode/4tFtKNw5hkXgSj9kxUDwcR
 分けられたファイルでは以下のようなテンプレートが使われています。
 
 ```markdown
-# OKとかいう特定の文言が入っていたら全部のチェックボックスにチェックを入れてくれるJSが欲しい
+# OKなどの特定の文言が入っているチェックボックスを全て一括でクリックしてくれるブックマークレットが欲しい
 
 <!-- Obsidianのタグの形式でタグを作成しておくことで、後から移行しやすくしておきます。このタスクファイルを作成した時点ですぐに書きます。 -->
 #DevOps #TestData #JavaScript #Bookmarklet
@@ -129,11 +127,11 @@ sequenceDiagram
 
 さて、ここまでの習慣を続けると、自然と改善の種が溜まっていきます。そこで、毎週1時間程度だけでも時間を確保して、以下のようなことを行う時間を作っています。
 
-「1人DevOpsタイム」では、タスク化してある改善の種に着手します。必ずしも実装系のタスクである必要はなく、市のウルに「この技術に関する入門記事を読む」というものでも問題ありません。どう考えても自分一人ではできないことは、仕事化を検討します。
+「1人DevOpsタイム」では、タスク化してある改善の種に着手します。必ずしも実装系のタスクである必要はなく、シンプルに「この技術に関する入門記事を読む」というものでも問題ありません。どう考えても自分一人ではできないことは、仕事化を検討します。
 
 私の1人DevOpsタイムの目的は以下のものと割り切っています。
 
-- 最低目標: 昨日の自分と比べて少し知っている人、できる人が増えた人になっていること。
+- 最低目標: 昨日の自分と比べて少しでも何かを知っている人、できることが増えていること。
 - 本当はここまでやりたい: 自分にとって本質的ではない時間を10秒減らすこと。
 - 理想: 他の人の時間を10秒減らす。10秒を10人分、100回繰り返すなら160分以上の時間を削減できます。人数が多ければ1000時間削減も。
 
@@ -211,7 +209,7 @@ function selectAllOK() {
 // javascript:(function(){const spans=document.querySelectorAll('span');let clicked=0;for(let i=0;i<spans.length;i++){if(spans[i].textContent.trim()==='OK'){spans[i].click();clicked++}}console.log('Clicked '+clicked+' OK buttons');return false;})();
 ```
 
-### VSCodeやCursorに情報を与えてスクリプトを書いてもらう
+### 補足:VSCodeやCursorにコードを書いてもらうための工夫
 
 [playwright-mcp](https://github.com/microsoft/playwright-mcp) と呼ばれるツールを使うことでVSCodeやCursorにチャットで指示を出して、ブラウザを実際に開いて操作してもらうことができます。
 
@@ -261,7 +259,7 @@ https://zenn.dev/aldagram_tech/articles/3614dbabbf2f5d
 
 ## さいごに
 
-今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました。
+今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました。実際はこのような小技から、「人がオペレーションしている部分をGitHub Actions で自動化する」といった王道の改善まで、様々なことを行なっています。
 
 正直なところ「そんなことをやっている暇がない」「そんな小さなことをしても仕方ない」と思う方も多いと思います。そんな時でも、私は小さな改善の種を忘れたり、諦めてしまわないことが大事だと思っています。
 今回は非常に小さな改善でしたが、「テスト環境でも本番に近いテストをするために日々どんなデータを作っておかないといけないか」「今の環境でもできることはなにか」といったことを考えるきっかけになるはずです。
