--- a/articles/e42fa03847dcd1.md
+++ b/articles/e42fa03847dcd1.md
@@ -1,5 +1,5 @@
 ---
-title: "ゆるい習慣と工夫で1000時間を削減せよ!SDET（SET)の1人DevOpsタイムでしていること"
+title: "ゆるい習慣と工夫で時間を削減せよ!SDET（SET)が1人DevOpsタイムでしている改善"
 emoji: "⏲️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["javascript", "Postman", "Cursor"]
@@ -66,11 +66,11 @@ TODO: GitHubのPRはる
 
 ```
 
-これにより私は改善の種を極力、忘れないようにしています。これが後の1人DevOpsタイムの改善に繋がっていきます。
+これにより私は改善のタネを極力、忘れないようにしています。これが後の1人DevOpsタイムの改善に繋がっていきます。
 
 ### APIのコールを見る習慣
 
-この処理はどうなってるんだろ？と思った時だけ良いので、Chrome の DevToolsで Network タブを開いてAPIのコールを確認する習慣をつけています。1つの機能を実現するための複数のAPIコールを確認することで、自分の認識が広がります。
+「この処理はどうなってるんだろう？」と思ったときにはChrome の DevToolsで Network タブを開いてAPIのコールを確認するようにしています。1つの機能を実現するための複数のAPIコールを確認することで、自分の認識が広がります。
 
 DevToolsの使い方については、以下の記事がわかりやすかったです。
 
@@ -125,15 +125,15 @@ sequenceDiagram
 
 ### 1人DevOpsタイムを作る
 
-さて、ここまでの習慣を続けると、自然と改善の種が溜まっていきます。そこで、毎週1時間程度だけでも時間を確保して、以下のようなことを行う時間を作っています。
+さて、ここまでの習慣を続けると、自然と改善のタネが溜まっていきます。そこで、毎週1時間程度だけでも時間を確保して、以下のようなことを行う時間を作っています。
 
-「1人DevOpsタイム」では、タスク化してある改善の種に着手します。必ずしも実装系のタスクである必要はなく、シンプルに「この技術に関する入門記事を読む」というものでも問題ありません。どう考えても自分一人ではできないことは、仕事化を検討します。
+「1人DevOpsタイム」では、タスク化してある改善のタネに着手します。必ずしも実装系のタスクである必要はなく、シンプルに「この技術に関する入門記事を読む」というものでも問題ありません。どう考えても自分一人ではできないことは、仕事化を検討します。
 
 私の1人DevOpsタイムの目的は以下のものと割り切っています。
 
-- 最低目標: 昨日の自分と比べて少しでも何かを知っている人、できることが増えていること。
-- 本当はここまでやりたい: 自分にとって本質的ではない時間を10秒減らすこと。
-- 理想: 他の人の時間を10秒減らす。10秒を10人分、100回繰り返すなら160分以上の時間を削減できます。人数が多ければ1000時間削減も。
+- 最低目標: 昨日の自分と比べて少しでも知識やスキルが増えていること
+- 本当はここまでやりたい: 自分にとって本質的ではない時間を10秒減らすこと
+- 理想: 他の人の時間を10秒減らすこと。10秒を10人分、100回繰り返すなら160分以上の時間を削減できます。人数が多ければ1000時間削減もあるかも。
 
 私が開発者としてのキャリアを決めるきっかけは「自分一人が楽になるツールを作ったら、他の人の時間も削減できた」という原体験があったからです。これらの目標の決め方も自分のモチベーションが極力上がりやすいように、ゆるく設定しています。
 
@@ -171,7 +171,7 @@ https://sqripts.com/2022/11/30/22135/
 
 ![sampleCheckbox](/images/soloDevOps/sample_examination.png)
 
-10秒 ~ 20秒程度の時間で終わると思います。しかし、これを毎回手動で行うのは面倒です。UIには「1つ1つの確認を確実に行ってもらうために、チェックボックス一括チェック機能がない」という明確な思想があるかもしれませんが、テストデータを作るために毎回手動でチェックするのは面倒です。
+10秒〜20秒程度の時間で終わると思います。しかし、これを毎回手動で行うのは面倒です。UIには「1つ1つの確認を確実に行ってもらうために、チェックボックス一括チェック機能がない」という明確な思想があるかもしれませんが、テストデータを作るために毎回手動でチェックするのは面倒です。
 
 そこで、ブックマークレットを作成しておくことで、毎回手動でチェックする必要がなくなります。ブックマークレットでは、ブラウザ上の操作をJavaScriptで記述することで、特定の操作を自動化できます。
 
@@ -261,7 +261,7 @@ https://zenn.dev/aldagram_tech/articles/3614dbabbf2f5d
 
 今回は私が日々時間を削減するために行なっている習慣や工夫について紹介しました。実際はこのような小技から、「人がオペレーションしている部分をGitHub Actions で自動化する」といった王道の改善まで、様々なことを行なっています。
 
-正直なところ「そんなことをやっている暇がない」「そんな小さなことをしても仕方ない」と思う方も多いと思います。そんな時でも、私は小さな改善の種を忘れたり、諦めてしまわないことが大事だと思っています。
+正直なところ「そんなことをやっている暇がない」「そんな小さなことをしても仕方ない」と思う方も多いと思います。そんな時でも、私は小さな改善のタネを忘れたり、諦めてしまわないことが大事だと思っています。
 今回は非常に小さな改善でしたが、「テスト環境でも本番に近いテストをするために日々どんなデータを作っておかないといけないか」「今の環境でもできることはなにか」といったことを考えるきっかけになるはずです。
 
 また、ただ改善を忘れないようにして誰かにメモを共有するだけで誰か別の人がサクッと実装してくれるかもしれません。ただメモを書いておくだけで、誰かの時間を削減できる可能性があるのです。
